'Roll to: [roll name] vertical align fix

--- a/app/assets/stylesheets/modules/_overlay.scss
+++ b/app/assets/stylesheets/modules/_overlay.scss
@@ -27,7 +27,7 @@
   display: inline;
   font-size: 1.2em;
   font-weight: 300;
-  line-height: 3.4;
+  line-height: 3.6;
   padding-left: 0.25em;
 
   & + .guide-overlay__button--cancel {
